# scrapethedocs

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/scrapethedocs/: __init__.py  _helpers.py  _link_extraction.py  _text_extraction.py
src/scrapethedocs_chekhv/: __init__.py  _helpers.py  _text_extraction.py
tests/: test_data.py  test_link_extraction.py  test_scrapethedocs.py  test_text_extraction.py
